# pogg-experimental-replication

./: .gitignore  README.md  pyproject.toml
configuration_data/: config_template.jsonnet  experiment_config_template.jsonnet  experiment_config_template__pre_refactor.jsonnet  pogg_config.json
configuration_data/lexicon_templates/: perplexity_templates.json  post_perplexity_templates.json  readme.txt
configuration_data/lexicon_templates/perplexity/: perplexity_templates.json  perplexity_templates_initial_dump.json
configuration_data/lexicon_templates/webnlg/: webnlg_post_perplexity_templates.json
datasets/WebNLG/configs/: WebNLG.jsonnet  WebNLG_Conrad_2026.jsonnet  WebNLG_Conrad_2026_config.json  WebNLG_config.json  jsonnset_conversion.sh
datasets/WebNLG/data_preparation/: convert_to_graph_jsons.py  convert_to_graph_jsons_modified_only.py  web_nlg_lexicon_routine.py  web_nlg_single_lexicon_routine.py
datasets/perplexity/configs/: jsonnet_conversion.sh  perplexity.jsonnet  perplexity_Conrad_2026.jsonnet  perplexity_Conrad_2026_config.json  perplexity_Conrad_2026_config__pre_refactor.json  perplexity_config.json  perplexity_config__pre_refactor.json  perplexity_diff_config.json  perplexity_diff_config.jsonnet
datasets/perplexity/data_conversion_code/: augment_old_dot_files.ipynb  convert_lexicon_format.py  convert_to_graph_jsons.ipynb  convert_to_graph_jsons.py  create_subgraphs.py  fix_lexicon_keys.py  perplexity_data_handling.py  save_raw_data_to_jsons.ipynb
src/: Conrad_2026_replication.sh  experiment_routine.py  lexicon_routine.py  refactor_trace.sh  single_experiment_routine.py  single_lexicon_routine.py  string_processing.py
src/refactor_trace/: experiment_routine__config_refactor.py  experiment_routine__eval_refactor.py  experiment_routine__lex_refactor.py  experiment_routine__pre_refactor.py  refactor_trace.sh
src/refactor_trace/configs/: README.txt  jsonnet_conversion.sh  perplexity_Conrad_2026__config_refactor.json  perplexity_Conrad_2026__config_refactor.jsonnet  perplexity_Conrad_2026__divide_repos.json  perplexity_Conrad_2026__divide_repos.jsonnet  perplexity_Conrad_2026__eval_refactor.json  perplexity_Conrad_2026__eval_refactor.jsonnet  perplexity_Conrad_2026__lex_refactor.json  perplexity_Conrad_2026__lex_refactor.jsonnet  perplexity_Conrad_2026__pre_refactor.json  (+3 more)
(+6464 files in other folders)
