[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pogg-experimental-replication"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/lizcconrad/pogg-experimental-replication#readme"
Issues = "https://github.com/lizcconrad/pogg-experimental-replication/issues"
Source = "https://github.com/lizcconrad/pogg-experimental-replication"

[tool.hatch.version]
path = "src/pogg_experimental_replication/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pogg_experimental_replication tests}"

[tool.coverage.run]
source_pkgs = ["pogg_experimental_replication", "tests"]
branch = true
parallel = true
omit = [
  "src/pogg_experimental_replication/__about__.py",
]

[tool.coverage.paths]
pogg_experimental_replication = ["src/pogg_experimental_replication", "*/pogg-experimental-replication/src/pogg_experimental_replication"]
tests = ["tests", "*/pogg-experimental-replication/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

# Environment with POGG afte perplexity development
[tool.hatch.envs.post-perplexity]
dependencies = [
  "pogg@git+https://github.com/lizcconrad/POGG.git@post-perplexity"
]
[tool.hatch.envs.post-perplexity.scripts]
perplexity = "python experiment_routine.py $COMPOSITION_CONFIG $POST_PERPLEXITY_PERPLEXITY_CONFIG -r $POST_PERPLEXITY_PERPLEXITY_RUN_NAME"

[tool.hatch.envs.latest-pogg]
dependencies = [
  "pogg@git+https://github.com/lizcconrad/POGG.git"
]
